--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uvplayer_lite",
-  "productName": "uvplayer_lite",
+  "name": "uvplayer-lite",
+  "productName": "uvplayer-lite",
   "version": "0.0.1",
   "description": "Universal video player lite version",
   "main": "./out/main/index.js",
@@ -24,19 +24,18 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.1",
     "@fontsource/open-sans": "^5.0.17",
-    "@sentry/electron": "^4.14.0",
-    "@sentry/react": "^7.83.0",
+    "@google-cloud/storage": "^7.7.0",
     "@vidstack/react": "^1.5.5",
     "axios": "^1.6.2",
     "axios-retry": "^4.0.0",
     "dotenv": "^16.3.1",
     "electron-log": "^5.0.1",
     "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7",
+    "googleapis": "^129.0.0",
     "hls.js": "^1.4.12",
     "modern-normalize": "^2.0.0",
     "moment": "^2.29.4",
-    "socket.io-client": "^4.7.2"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
