fix delete file

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -30,6 +30,7 @@ nsis:
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+  deleteAppDataOnUninstall: false
 linux:
   publish: github
   target:
