--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@electron-toolkit/eslint-config-prettier": "^1.0.1",
     "@sentry/vite-plugin": "^2.10.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^28.0.0",
+    "electron": "latest",
     "electron-builder": "^24.9.1",
     "electron-vite": "^1.0.29",
     "eslint": "^8.55.0",
