--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uvplayer-lite",
   "productName": "uvplayer-lite",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Universal video player lite version",
   "main": "./out/main/index.js",
   "author": "identity invest",
@@ -14,7 +14,8 @@
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --config --publish never",
     "build:linux": "npm run build && electron-builder --linux --config --publish never",
-    "bump": "npm version patch -m \"Release %s\" && git push && git push --tags",
+    "release": "standard-version -m \"Release %s\" && git push && git push --tags",
+    "release:beta": "standard-version --prerelease beta -m \"Prerelease %s\" && git push && git push --tags",
     "postinstall": "electron-builder install-app-deps"
   },
   "license": "MIT",
@@ -53,6 +54,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "standard-version": "^9.5.0"
   }
 }
