--- a/.github/workflows/build-beta.yml
+++ b/.github/workflows/build-beta.yml
@@ -3,12 +3,16 @@ name: Build/release Electron app
 on:
   push:
     tags:
-      - v*.*.*
+      - v*.*.*-beta.*
 
 jobs:
   release:
     runs-on: ${{ matrix.os }}
-
+    env:
+      SENTRY_AUTH_TOKEN: ${{secrets.SENTRY_AUTH_TOKEN}}
+      SENTRY_ORG: ${{secrets.SENTRY_ORG}}
+      SENTRY_PROJECT: ${{secrets.SENTRY_PROJECT}}
+      GH_TOKEN: ${{secrets.GH_TOKEN}}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -20,28 +24,20 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-
+          node-version: lts/*
       - name: Install Dependencies
         run: yarn install
-        env:
-          SENTRY_AUTH_TOKEN: ${{secrets.SENTRY_AUTH_TOKEN}}
-          SENTRY_ORG: ${{secrets.SENTRY_ORG}}
-          SENTRY_PROJECT: ${{secrets.SENTRY_PROJECT}}
-          GH_TOKEN: ${{secrets.GH_TOKEN}}
-
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
         run: yarn build:linux
-
       - name: build-win
         if: matrix.os == 'windows-latest'
         run: yarn build:win
-
       - name: release
         uses: softprops/action-gh-release@v1
         with:
           draft: false
+          prerelease: true
           files: |
             dist/*.exe
             dist/*.zip
