feat: add auto-launch app

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -40,6 +40,7 @@ linux:
         - arm64
   maintainer: lite.ii-uvp.com
   category: AudioVideo
+  packageCategory: AudioVideo
   artifactName: ${name}-linux-${arch}-${version}.${ext}
 npmRebuild: true
 publish:
