--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@google-cloud/storage": "^7.12.1",
     "@vidstack/react": "^1.9.8",
     "antd": "^5.20.2",
+    "auto-launch": "^5.0.6",
     "axios": "^1.7.4",
     "axios-retry": "^4.5.0",
     "dayjs": "^1.11.13",
@@ -54,7 +55,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vite": "^5.4.2",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "vite": "^5.4.2"
   }
 }
